chore(ci): add coverage

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,15 +20,15 @@ jobs:
       - run: deno test --coverage=./coverage
       - run: deno coverage ./coverage --lcov --output=coverage/lcov.info
       - run: deno bench
-#      - if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-#        name: report coverage to code climate
-#        run: |
-#          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-#          chmod +x ./cc-test-reporter
-#          ./cc-test-reporter format-coverage -t lcov coverage/lcov.info
-#          ./cc-test-reporter upload-coverage
-#        env:
-#          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+      - if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        name: report coverage to code climate
+        run: |
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+          chmod +x ./cc-test-reporter
+          ./cc-test-reporter format-coverage -t lcov coverage/lcov.info
+          ./cc-test-reporter upload-coverage
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
 
   publish:
     needs: test
